Fix layout issues in App component and correct CSS syntax in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -32,10 +32,10 @@
 
 body {
   margin: 0;
-  fontFamily: Roboto, Helvetica, Arial, sans-serif;
+  padding: 0;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-y: scroll;
 }
 
 /* Prevent Material-UI from changing scrollbar when modals open */
